--- a/src/app/bubble/bubble.component.html
+++ b/src/app/bubble/bubble.component.html
@@ -1,1 +1,13 @@
-<div #workarea class="graph"></div>
+<div class="row">
+
+    <div #workarea class="graph"></div>
+
+</div>
+<div class="row ">
+    <div class="col-md-6 offset-md-3 bubble-stats">
+      ALCANCE MÁXIMO: <br>
+      <span class="bubble-stats-number"> {{this.max}} <br> </span>
+      USUARIOS ÚNICOS:<br>
+      <span class="bubble-stats-number">{{this.users}} </span>
+
+</div>
