--- a/src/app/trend/trend.component.scss
+++ b/src/app/trend/trend.component.scss
@@ -5,15 +5,50 @@
 
 .line {
   fill: none;
-  stroke: #7dcb62;
+  stroke: #008000;
   stroke-width: 2px;
+  // stroke-opacity: 0.5;
 }
+//
+// .line:hover {
+//   stroke-opacity: 1;
+// }
+
+
 
 .dot {
   fill: #e3f5dd;
-  stroke: #7dcb62;
+  stroke: #008000;
   stroke-width: 1px;
+  // stroke-opacity: 0.5;
 }
+
+// .dot:hover{
+//     stroke-opacity: 1;
+// }
+
+.line-neg {
+  fill: none;
+  stroke: #cf0000;
+  stroke-width: 2px;
+  // stroke-opacity: 0.5;
+}
+
+.dot-neg {
+  fill: #fdb9ae;
+  stroke: #cf0000;
+  stroke-width: 1px;
+  // stroke-opacity: 0.5;
+}
+
+// .dot-neg:hover {
+//   stroke-opacity: 1;
+// }
+//
+// .line-neg:hover{
+//   stroke-opacity: 1;
+// }
+
 
 .tick text {
   fill: #bbb;
