--- a/src/app/data/data.component.html
+++ b/src/app/data/data.component.html
@@ -6,7 +6,7 @@
         <counter class="col" [config]= "CounterConfig"></counter>
       </section>
 
-      <div class="section-header">
+      <div class="row section-header">
         <h6>Sentimiento por categoria</h6>
         <em>- Tweets clasificados en las ultimas 12 horas</em>
         <div class="section-header-toolbar">
@@ -20,9 +20,9 @@
         <bar-chart class="col" [config]="BarChartConfig"></bar-chart>
       </section>
 
-      <div class="section-header">
-        <h6>Tendencia</h6>
-        <em>- Sentimiento y cantidad de tweets en los ultimos 3 días</em>
+      <div class="row section-header">
+        <h6>Tendencia </h6>
+        <em>- Cantidad de tweets en los últimos 3 días</em>
         <div class="section-header-toolbar">
 					<a href="#" title="Compartir"><i class="fa fa-share-alt" aria-hidden="true"></i></a>
 					<a href="#" title="Compartir"><i class="fa fa-clipboard" aria-hidden="true"></i></a>
@@ -31,7 +31,7 @@
 
 
       <section class="row">
-        <trendNeg-chart class="col" [config]="TrendNegChartConfig"></trendNeg-chart>
+        <trend-chart class="col" [config]="TrendChartConfig"></trend-chart>
       </section>
     </main>
 
