--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -1,5 +1,5 @@
 <div class="row" style="border-bottom: 1px solid #ddd;">
-  <div class="col-md-3">
+  <div class="col-1">
     <div class="btn-group">
       <button class="btn btn-link dropdown-toggle" style="color: #777; border-right: 1px solid #ddd;" type="button" data-toggle="dropdown"><i class="fa fa-sliders" aria-hidden="true"></i></button>
       <div class="dropdown-menu">
@@ -10,7 +10,7 @@
       </div>
     </div>
   </div>
-  <div class="col-md-9">
+  <div class="col-11">
     <div class="top-content">
       <ul class="list-inline mini-stat">
         <li>
